--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Demo app with basic REST API ## REST API List of basic routes:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
