--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "rest-api",
-  "version": "8.9.4",
+  "version": "1.0.0",
+  "engines": {
+    "node": "8.9.4"
+  },
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
