--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demo App with basic REST API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/barestu/rest-api#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "bcrypt": "^1.0.3",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.0",
+    "pg": "^7.4.1",
+    "sequelize": "^4.37.5"
   },
   "devDependencies": {
     "morgan": "^1.9.0"
