--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple rest api with express and MVC",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "http-errors": "^1.6.3",
     "jsonwebtoken": "^8.2.0",
     "morgan": "^1.9.0",
+    "nodemon": "^1.17.3",
     "path": "^0.12.7",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
