after setting config to heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Demo app with basic REST API",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "heroku-cli": "^6.16.3",
     "jsonwebtoken": "^8.2.0",
     "pg": "^7.4.1",
     "sequelize": "^4.37.5"
