--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple rest api with express and MVC",
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
