--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "rest-api",
-  "version": "1.0.0",
-  "description": "simple rest-api using express, sequelize and postgreSql",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rg872/rest-api.git"
-  },
-  "author": "Rafie Gilang",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rg872/rest-api/issues"
-  },
-  "homepage": "https://github.com/rg872/rest-api#readme",
   "dependencies": {
-    "npm": "^5.8.0"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.0"
   }
 }
