--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/zenavilenia/rest-api#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.0",
