--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^1.0.3",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "http-errors": "^1.6.3",
