--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/irsyadpahlapi/rest-api-1#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.0",
     "mongodb": "^3.0.5",
