--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/barestu/rest-api#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.0",
     "pg": "^7.4.1",
